<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tryApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nameLabel">Name</string>
    <string name="emailLabel">E-Mail</string>
    <string name="cellNumLabel">Cellphone Number</string>
    <string name="birthLabel">Birthday</string>
    <string name="submitButton">Submit</string>
    <string name="createLabel">Create</string>
    <string name="contactLabel">Contacts</string>
    <string name="title_activity_view_contacts">ViewContactsActivity</string>
    <string name="employeeLabel">Employee Type</string>
    <string name="regular">Regular</string>
    <string name="trainee">Trainee</string>
    <string name="hourEmp">Hourly Employee</string>
    <string name="executive">Executive</string>
    <string name="shareholder">Shareholder</string>
    <string name="wage">Hourly Wage</string>
    <string name="hours">Hours per month</string>
    <string name="bonus">Bonus</string>
	<string name="percent">0%</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
    <string name="income">Income</string>
	
    <string-array name="employee_type">
        <item >@string/regular</item>
        <item >@string/trainee</item>
        <item >@string/hourEmp</item>
        <item >@string/executive</item>
        <item >@string/shareholder</item>
    </string-array>

</resources>
